Fixed installments alignment

--- a/src/AppBundle/Resources/public/scss/ca.scss
+++ b/src/AppBundle/Resources/public/scss/ca.scss
@@ -394,6 +394,7 @@ button {
       .content {
         display: flex;
         flex-direction: row;
+        position: relative;
         .sales-package-container {
           display: flex;
           flex-direction: row;
